--- a/app/views/coderetreats/edit_status.html.haml
+++ b/app/views/coderetreats/edit_status.html.haml
@@ -2,3 +2,5 @@
 = form_for @coderetreat, url: update_status_coderetreats_path(@coderetreat, new_status: 'in_session'), method: 'put' do |f|
   = f.submit 'Start Session'
 
+= form_for @coderetreat, url: update_status_coderetreats_path(@coderetreat, new_status: 'on_break'), method: 'put' do |f|
+  = f.submit 'Start Break'
