--- a/app/views/coderetreats/running_today.html.haml
+++ b/app/views/coderetreats/running_today.html.haml
@@ -12,3 +12,9 @@ There are no coderetreats running today
   %ul
     - @coderetreats.in_session do |coderetreat|
       %li.coderetreat= coderetreat.location
+%section.coderetreats.on_break
+  %header
+    %h2 On Break
+  %ul
+    - @coderetreats.on_break do |coderetreat|
+      %li.coderetreat= coderetreat.location
